# installer

./: .gitignore  .mise.toml  ADVANCED_PROVISIONING_SUMMARY.md  DEVELOPMENT_GUIDE.md  DEV_CLOUD_IMAGE.md  DEV_SETUP_SUMMARY.md  Makefile  README_DEV_SETUP.md  TOOLING_MISE.md  UNIFIED_PROVISIONING.md  Vagrantfile  dev-build.sh  prepare-dev-binaries.sh  test-dev-setup.sh
docs/: DOCUMENTATION_GUIDELINES.md
examples/: default-network.xml  dev-vm-libvirt.xml  start-dev-vm-bhyve.sh
illumos installer UI/: .gitignore  angular.json  package.json
image/: IMAGE_BUILDER.md  IMAGE_BUILDER_USAGE.md  README.md  boot_archive.sh
imgdepot/: .gitignore  Cargo.toml  README.md
imgdepot/config/: default.toml  dev.toml  production.toml
imgdepot/src/: client.rs  config.rs  digest.rs  error.rs  lib.rs  main.rs  models.rs  storage.rs
imgdepot/src/api/: auth.rs  models.rs  routes.rs
imgdepot/tests/: oci_test.rs  registry_test.rs  simple_test.rs
installadm/: .gitignore  Cargo.toml  build.rs
installadm/config/: default.toml  sample.toml  sample.yaml
installadm/src/: config.rs  machined.rs  main.rs  state.rs  usb.rs
installer-docs/: README.md  book.toml
installer-ui/: ARCHITECTURE.md  Cargo.toml  Dioxus.toml  INTEGRATION.md  README.md  WINDOW_OPTIMIZATION.md  build.rs  example-config.kdl  launcher.sh  run.sh  window-config.example
installer-ui/assets/: main.css
installer-ui/frontend-ng/: README.md  angular.json  package-lock.json  package.json
installer-ui/frontend-ng/src/app/: app.config.ts  app.routes.ts  app.ts
installer-ui/frontend-ng/src/app/machines/: details.component.css  details.component.html  details.component.ts  overview.component.css  overview.component.html  overview.component.ts
installer-ui/frontend-ng/src/app/services/: machines.service.ts
installer-ui/src/: main.rs
installer-ui/src/components/: layout.rs  mod.rs
installer-ui/src/components/pages/: installation.rs  mod.rs  network_configuration.rs  review_configuration.rs  server_selection.rs  storage_configuration.rs  system_configuration.rs  welcome.rs
installer-ui/src/routes/: mod.rs
installer-ui/src/server/: mod.rs
installer-ui/src/state/: mod.rs
installer-ui/static/: index.html
instcomd/: Cargo.toml  docker-compose.yaml
lib/: common.sh
machineconfig/: Cargo.toml  sample.kdl
machined/: .aiignore  Cargo.toml  Vagrantfile  build.rs  testing.http
machined/image/: README.md  boot_archive.sh  dhcpd.conf  iso.sh  setup.sh  strap.sh
machined/image/lib/: common.sh
machined/image/templates/cloudimage/: ttya-openindiana-hipster-dev.json
machined/image/templates/files/: bootparams.sh  default_init  filesystem-minimal-media.xml  filesystem-root-media.xml  iso-loader.conf  live-fs-usr.xml  machined-smf-service.xml  machined-wrapper.sh  platform_i86pc.xml  ramdisk-vfstab  start-dhcp-everywhere  start-dhcp.xml
machined/image/templates/files/sysconfig-dev/: dev-9p-mount  illumos-base-plugin-wrapper  provisioning-plugin-wrapper  sysconfig-illumos-base-plugin.xml  sysconfig-provisioning.xml  sysconfig-wrapper  sysconfig.toml  vfstab
machined/image/templates/include/: common.json  devfs.json  machined-dev.json  metadata.json  sysconfig-dev.json
machined/image/templates/installer/: Notes.md  eltorito-efi.json  generic-ttya-ufs.json  generic-ttya-zfs.json  qemu-ttya-iso.json  ramdisk-01-strap.json  ramdisk-02-image.json  ramdisk-03-archive.json
machined/image/templates/installer/include/: platform_profile.json
machined/proto/: machined.proto
machined/src/: config.rs  devprop.rs  error.rs  machined.rs  main.rs  process.rs  sysinfo.rs  util.rs
machined/src/platform/: mod.rs
machined/src/platform/illumos/: image.rs  mod.rs  zpool.rs
machined/src/platform/mock/: mod.rs
ociclient/: Cargo.toml
ociclient/src/: client.rs  digest.rs  image_reference.rs  lib.rs  models.rs
service-configs/: README.md  install.sh
sysconfig/: Cargo.toml  PHASE2_SUMMARY.md  README.md  build.rs
sysconfig-cli/: Cargo.toml  Makefile  QUICKSTART.md  README.md  SUMMARY.md  build.rs  demo.sh  install.sh  test_jsonpath.sh  test_socket_detection.sh
sysconfig-cli/examples/: state.json
sysconfig-cli/src/: main.rs
sysconfig-config-schema/: Cargo.toml  README.md
sysconfig-config-schema/src/: lib.rs
sysconfig-plugins/: Cargo.toml  DRY_RUN_TESTING.md  build.rs  test-cloud-init-example.yaml  test-network-config.json  test-provisioning-config.kdl  test-provisioning-full.json  test-provisioning-knus.kdl  test-provisioning-local.json  test-provisioning-simple.kdl  test-unified-provisioning.json  test_dry_run_e2e.sh  test_provisioning_e2e.sh
sysconfig-plugins/docs/: PROVISIONING_PLUGIN.md  Simplifying Cloud-Init Configuration Schema.md
sysconfig-plugins/examples/: README.md  advanced-freebsd-config.json  advanced-illumos-config.json  advanced-linux-config.json
sysconfig-plugins/src/: lib.rs
sysconfig-plugins/src/provisioning/: converter.rs  datasources.rs  mod.rs
sysconfig-plugins/src/tasks/: containers.rs  firewall.rs  network_links.rs  packages.rs  services.rs  storage.rs  users.rs
sysconfig-plugins/src/tasks/files/: mod.rs  unix.rs  windows.rs
sysconfig-plugins/src/tasks/network_settings/: freebsd.rs  illumos.rs  linux.rs  mod.rs  windows.rs
sysconfig-provisioning/: Cargo.toml  README.md  build.rs  test_cli.sh  test_socket_paths.rs
sysconfig-provisioning/examples/: check_sources.rs
sysconfig-provisioning/src/: config.rs  lib.rs  main.rs  merger.rs  sources.rs
sysconfig-provisioning/src/sources/: azure.rs  cloud_init.rs  digitalocean.rs  ec2.rs  gcp.rs  local.rs  mod.rs  openstack.rs  smartos.rs  utils.rs
sysconfig-provisioning/tests/: test_sources_available.rs
sysconfig/docs/: config-file-format.md  kdl-configuration.md  plugin-development.md
sysconfig/examples/: config.kdl  full-system.kdl  minimal.kdl
sysconfig/image/templates/files/: sysconfig-smf-service.xml
sysconfig/proto/: sysconfig.proto
sysconfig/src/: config.rs  kdl_loader.rs  kdl_parser.rs  lib.rs  main.rs  plugin.rs  proto.rs  service.rs  state_manager.rs
sysconfig/tests/: kdl_integration.rs
(+117 files in other folders)
