[package]
name = "installadm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
miette = "7.4.0"
platform-dirs = "0.3.0"
prost = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"


[build-dependencies]
tonic-build = "*"
