[package]
name = "installer-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
thiserror = "1"
# OpenAPI generation
utoipa = { version = "5", features = ["axum_extras", "macros"] }
# gRPC client stack
tonic = { version = "0.11", features = ["zstd"] }
prost = "0.12.3"
# config parsing/integration
machineconfig = { path = "../machineconfig", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
