[package]
name = "machined"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
reqwest = { version = "0.12.9", features = ["multipart"] }
tokio = { version = "1.42.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
tonic = "*"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "*"