[package]
name = "machined"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
reqwest = { version = "0.12.9", features = ["multipart"] }
tokio = { version = "1.42.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
tonic = "*"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
nix = { version = "0.29.0", features = ["net"] }
passwords = "3.1.16"

[build-dependencies]
tonic-build = "*"
