[package]
name = "machined"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
oci_util = { version = "*", git = "https://github.com/michael-yuji/xc"}
machineconfig = { version = "0.1.0", path = "../machineconfig" }
knus = "3.2.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["tokio-macros", "rt", "rt-multi-thread", "macros"] }
tonic = "*"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15.4"
serde = { version = "1.0.215", features = ["derive"] }
nix = { version = "0.29.0", features = ["net"] }
passwords = "3.1.16"
jwt-simple = { version = "0.12.11", default-features = false, features = ["pure-rust"]}
base64 = "0.22.1"

[build-dependencies]
tonic-build = "*"
