[package]
name = "ociclient"
version = "0.1.0"
edition = "2024"
description = "OCI Distribution Spec compliant client library"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bytes = "1.5.0"
thiserror = "1.0.57"
anyhow = "1.0.80"
base64 = "0.21.7"
sha2 = "0.10.8"
hex = "0.4.3"
