[package]
name = "sysconfig"
version = "0.1.0"
edition = "2021"

[dependencies]
knus = "3.2.0"
thiserror = "2"
miette = "7.4"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.3"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tokio-stream = { version = "0.1.14", features = ["net", "sync"] }
tower = "0.4"
chrono = "0.4"
async-trait = "*"
tokio-util = { version = "0.7.15", features = ["compat"] }

[dev-dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
tokio-test = "0.4.3"
assert_matches = "1.5.0"

[build-dependencies]
tonic-build = "0.11.0"
